--- a/index.html
+++ b/index.html
@@ -1,22 +1,53 @@
 <!DOCTYPE html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Edu+NSW+ACT+Foundation&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&family=Oswald:wght@500&display=swap" rel="stylesheet">
 </head>
 
-<header>
-    <div class="T1">
-        <p>WHAT</p>
-        <button id="b1"> Dont press me</button>
-            </div> 
 
-</header>
 
-<body>
+<body> 
+    <header>
+        <div class="container">
+        <div class="header_menu">
+        <a class="header_menu_item">HOME</a>
+        <a class="header_menu_item">ABOUT</a>
+        <a class="header_menu_item">COURSES</a>
+        <a class="header_menu_item">BLOG</a>
+        </div>
+        <div class="signin">
+            <p class="signin_text">SIGN IN</p>
+            </div>
+        </div>
     
+        
+    </header>
+    <div class="firstpic">
+        <div class="firstpic_circle"></div>
+        <img class="firstpic_img" src="assets/img/guy1.png" alt="guy pic">
+    </div>
+
+    <ul class="statistics">
+            <div class="statistics_item">
+                <p class="statistics_item_plus">+</p>
+                <p class="statistics_item_number">150</p>
+                <p class="statistics_item_name">HAPPY<br><b>STUDENTS</b></p>
+            </div>
+            <div class="statistics_item">
+                <p class="statistics_item_plus">+</p>
+                <p class="statistics_item_number">50</p>
+                <p class="statistics_item_name">CERTIFIED<br><b>COURSES</b></p>
+            </div>
+            <div class="statistics_item">
+                <p class="statistics_item_plus">+</p>
+                <p class="statistics_item_number">1000</p>
+                <p class="statistics_item_name">AWARDS<br><b>RECEIVED</b></p>
+            </div>
+        </ul>
 </body>
+
 
 </html>
