--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             <div class="section_courses_centralImage_text"><b>ACCEPT</b></br>NEW<br><b>CHALLENGES</b></div>
             <img class="section_courses_centralImage_oval" src="assets/img/Oval.png"></div>
         </div>
-        <div class="section_courses_sideText1"">
+        <div class="section_courses_sideText1">
             <div class="section_courses_sideText_square"></div>
             <span class="section_courses_sideText_text">DISCOVER YOUR SKILLS</span>
         </div>
-        <div class="section_courses_sideText2"">
+        <div class="section_courses_sideText2">
             <div class="section_courses_sideText_square"></div>
             <span class="section_courses_sideText_text">DISCOVER YOUR SKILLS</span>
         </div>
